Add html and css

--- a/index.html
+++ b/index.html
@@ -9,11 +9,181 @@
       integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU"
       crossorigin="anonymous"
     />
+    <link href="src/style.css" rel="stylesheet" type="text/css"/>
     <title>Memory Game!</title>
   </head>
 
   <body class="container bg-light shadow p-5">
-    <div id="root">Inject your content here</div>
+    <div id="root">
+      <h1 class="text-center mb-4">Memory Game</h1>
+      <div class="game-container m-auto mb-4">
+        <div class=memory-card>
+          <div class=memory-card-positioning>
+            <div class="memory-card-top">
+              <p>Top image</p>
+            </div>
+            <div class="memory-card-bottom">
+              <p>Bottom image</p>
+            </div>
+          </div>
+        </div>
+        <div class=memory-card>
+          <div class=memory-card-positioning>
+            <div class="memory-card-top">
+              <p>Top image</p>
+            </div>
+            <div class="memory-card-bottom">
+              <p>Bottom image</p>
+            </div>
+          </div>
+        </div>
+        <div class=memory-card>
+          <div class=memory-card-positioning>
+            <div class="memory-card-top">
+              <p>Top image</p>
+            </div>
+            <div class="memory-card-bottom">
+              <p>Bottom image</p>
+            </div>
+          </div>
+        </div>
+        <div class=memory-card>
+          <div class=memory-card-positioning>
+            <div class="memory-card-top">
+              <p>Top image</p>
+            </div>
+            <div class="memory-card-bottom">
+              <p>Bottom image</p>
+            </div>
+          </div>
+        </div>
+        <div class=memory-card>
+          <div class=memory-card-positioning>
+            <div class="memory-card-top">
+              <p>Top image</p>
+            </div>
+            <div class="memory-card-bottom">
+              <p>Bottom image</p>
+            </div>
+          </div>
+        </div>
+        <div class=memory-card>
+          <div class=memory-card-positioning>
+            <div class="memory-card-top">
+              <p>Top image</p>
+            </div>
+            <div class="memory-card-bottom">
+              <p>Bottom image</p>
+            </div>
+          </div>
+        </div>
+        <div class=memory-card>
+          <div class=memory-card-positioning>
+            <div class="memory-card-top">
+              <p>Top image</p>
+            </div>
+            <div class="memory-card-bottom">
+              <p>Bottom image</p>
+            </div>
+          </div>
+        </div>
+        <div class=memory-card>
+          <div class=memory-card-positioning>
+            <div class="memory-card-top">
+              <p>Top image</p>
+            </div>
+            <div class="memory-card-bottom">
+              <p>Bottom image</p>
+            </div>
+          </div>
+        </div>
+        <div class=memory-card>
+          <div class=memory-card-positioning>
+            <div class="memory-card-top">
+              <p>Top image</p>
+            </div>
+            <div class="memory-card-bottom">
+              <p>Bottom image</p>
+            </div>
+          </div>
+        </div>
+        <div class=memory-card>
+          <div class=memory-card-positioning>
+            <div class="memory-card-top">
+              <p>Top image</p>
+            </div>
+            <div class="memory-card-bottom">
+              <p>Bottom image</p>
+            </div>
+          </div>
+        </div>
+        <div class=memory-card>
+          <div class=memory-card-positioning>
+            <div class="memory-card-top">
+              <p>Top image</p>
+            </div>
+            <div class="memory-card-bottom">
+              <p>Bottom image</p>
+            </div>
+          </div>
+        </div>
+        <div class=memory-card>
+          <div class=memory-card-positioning>
+            <div class="memory-card-top">
+              <p>Top image</p>
+            </div>
+            <div class="memory-card-bottom">
+              <p>Bottom image</p>
+            </div>
+          </div>
+        </div>
+        <div class=memory-card>
+          <div class=memory-card-positioning>
+            <div class="memory-card-top">
+              <p>Top image</p>
+            </div>
+            <div class="memory-card-bottom">
+              <p>Bottom image</p>
+            </div>
+          </div>
+        </div>
+        <div class=memory-card>
+          <div class=memory-card-positioning>
+            <div class="memory-card-top">
+              <p>Top image</p>
+            </div>
+            <div class="memory-card-bottom">
+              <p>Bottom image</p>
+            </div>
+          </div>
+        </div>
+        <div class=memory-card>
+          <div class=memory-card-positioning>
+            <div class="memory-card-top">
+              <p>Top image</p>
+            </div>
+            <div class="memory-card-bottom">
+              <p>Bottom image</p>
+            </div>
+          </div>
+        </div>
+        <div class=memory-card>
+          <div class=memory-card-positioning>
+            <div class="memory-card-top">
+              <p>Top image</p>
+            </div>
+            <div class="memory-card-bottom">
+              <p>Bottom image</p>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="controls-container d-flex justify-content-evenly">
+        <div class="timer">00:00</div>
+        <button>▶️</button>
+        <div class="score">Score: 0</div>
+      </div>
+    </div>
 
     <!-- JavaScript Bundle with Popper -->
     <script
