--- a/index.html
+++ b/index.html
@@ -20,160 +20,160 @@
         <div class=memory-card>
           <div class=memory-card-positioning>
             <div class="memory-card-top">
-              <p>Top image</p>
+              <img src="./src/img/graycolor.png">
             </div>
             <div class="memory-card-bottom">
-              <p>Bottom image</p>
+              <img src="./src/img/icons8-amazon-64.png">
             </div>
           </div>
         </div>
         <div class=memory-card>
           <div class=memory-card-positioning>
             <div class="memory-card-top">
-              <p>Top image</p>
+              <img src="./src/img/graycolor.png">
             </div>
             <div class="memory-card-bottom">
-              <p>Bottom image</p>
+              <img src="./src/img/icons8-apple-music-64.png">
             </div>
           </div>
         </div>
         <div class=memory-card>
           <div class=memory-card-positioning>
             <div class="memory-card-top">
-              <p>Top image</p>
+              <img src="./src/img/graycolor.png">
             </div>
             <div class="memory-card-bottom">
-              <p>Bottom image</p>
+              <img src=".src/img/icons8-facebook-neu-64.png">
             </div>
           </div>
         </div>
         <div class=memory-card>
           <div class=memory-card-positioning>
             <div class="memory-card-top">
-              <p>Top image</p>
+              <img src="./src/img/graycolor.png">
             </div>
             <div class="memory-card-bottom">
-              <p>Bottom image</p>
+              <img src=".src/img/icons8-mac-os-64.png">
             </div>
           </div>
         </div>
         <div class=memory-card>
           <div class=memory-card-positioning>
             <div class="memory-card-top">
-              <p>Top image</p>
+              <img src="./src/img/graycolor.png">
             </div>
             <div class="memory-card-bottom">
-              <p>Bottom image</p>
+              <img src=".src/img/icons8-mastercard-64.png">
             </div>
           </div>
         </div>
         <div class=memory-card>
           <div class=memory-card-positioning>
             <div class="memory-card-top">
-              <p>Top image</p>
+              <img src="./src/img/graycolor.png">
             </div>
             <div class="memory-card-bottom">
-              <p>Bottom image</p>
+              <img src=".src/img/icons8-paypal-64.png">
             </div>
           </div>
         </div>
         <div class=memory-card>
           <div class=memory-card-positioning>
             <div class="memory-card-top">
-              <p>Top image</p>
+              <img src="./src/img/graycolor.png">
             </div>
             <div class="memory-card-bottom">
-              <p>Bottom image</p>
+              <img src=".src/img/icons8-twitter-64.png">
             </div>
           </div>
         </div>
         <div class=memory-card>
           <div class=memory-card-positioning>
             <div class="memory-card-top">
-              <p>Top image</p>
+              <img src="./src/img/graycolor.png">
             </div>
             <div class="memory-card-bottom">
-              <p>Bottom image</p>
+              <img src=".src/img/icons8-visa-64.png">
             </div>
           </div>
         </div>
         <div class=memory-card>
           <div class=memory-card-positioning>
             <div class="memory-card-top">
-              <p>Top image</p>
+              <img src="./src/img/graycolor.png">
             </div>
             <div class="memory-card-bottom">
-              <p>Bottom image</p>
+              <img src=".src/img/icons8-visa-64.png">
             </div>
           </div>
         </div>
         <div class=memory-card>
           <div class=memory-card-positioning>
             <div class="memory-card-top">
-              <p>Top image</p>
+              <img src="./src/img/graycolor.png">
             </div>
             <div class="memory-card-bottom">
-              <p>Bottom image</p>
+              <img src="src/img/">
             </div>
           </div>
         </div>
         <div class=memory-card>
           <div class=memory-card-positioning>
             <div class="memory-card-top">
-              <p>Top image</p>
+              <img src="./src/img/graycolor.png">
             </div>
             <div class="memory-card-bottom">
-              <p>Bottom image</p>
+              <img src="src/img/">
             </div>
           </div>
         </div>
         <div class=memory-card>
           <div class=memory-card-positioning>
             <div class="memory-card-top">
-              <p>Top image</p>
+              <img src="./src/img/graycolor.png">
             </div>
             <div class="memory-card-bottom">
-              <p>Bottom image</p>
+              <img src="src/img/">
             </div>
           </div>
         </div>
         <div class=memory-card>
           <div class=memory-card-positioning>
             <div class="memory-card-top">
-              <p>Top image</p>
+              <img src="./src/img/graycolor.png">
             </div>
             <div class="memory-card-bottom">
-              <p>Bottom image</p>
+              <img src="src/img/">
             </div>
           </div>
         </div>
         <div class=memory-card>
           <div class=memory-card-positioning>
             <div class="memory-card-top">
-              <p>Top image</p>
+              <img src="./src/img/graycolor.png">
             </div>
             <div class="memory-card-bottom">
-              <p>Bottom image</p>
+              <img src="src/img/">
             </div>
           </div>
         </div>
         <div class=memory-card>
           <div class=memory-card-positioning>
             <div class="memory-card-top">
-              <p>Top image</p>
+              <img src="./src/img/graycolor.png">
             </div>
             <div class="memory-card-bottom">
-              <p>Bottom image</p>
+              <img src="src/img/">
             </div>
           </div>
         </div>
         <div class=memory-card>
           <div class=memory-card-positioning>
             <div class="memory-card-top">
-              <p>Top image</p>
+              <img src="./src/img/graycolor.png">
             </div>
             <div class="memory-card-bottom">
-              <p>Bottom image</p>
+              <img src="src/img/">
             </div>
           </div>
         </div>
