First commit on maxie

--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
               <img src="./src/img/graycolor.png">
             </div>
             <div class="memory-card-bottom">
-              <img src="src/img/">
+              <img src=".src/img/">
             </div>
           </div>
         </div>
